--- a/scrapyspider/chart/doub_year.html
+++ b/scrapyspider/chart/doub_year.html
@@ -29,16 +29,15 @@
 </script>
 </head>
 <body>
-    <div id="c9e866b79abe4296b9bf8b87b4e5a01e" style="width:800px;height:400px;"></div>
+    <div id="3c1603b7e8af47bf934331d61aaffeba" style="width:800px;height:400px;"></div>
     <script type="text/javascript">
 
-var myChart_c9e866b79abe4296b9bf8b87b4e5a01e = echarts.init(document.getElementById('c9e866b79abe4296b9bf8b87b4e5a01e'), 'light', {renderer: 'canvas'});
+var myChart_3c1603b7e8af47bf934331d61aaffeba = echarts.init(document.getElementById('3c1603b7e8af47bf934331d61aaffeba'), 'light', {renderer: 'canvas'});
 
-var option_c9e866b79abe4296b9bf8b87b4e5a01e = {
+var option_3c1603b7e8af47bf934331d61aaffeba = {
     "title": [
         {
-            "text": "\u8c46\u74e3TOP250\u7535\u5f71",
-            "subtext": "\u56fd\u5bb6\u7535\u5f71\u6570",
+            "text": "\u8c46\u74e3\u7535\u5f71TOP250\u4e0a\u699c\u7535\u5f71\u6570\u6240\u5728\u5e74\u4efd\u5206\u5e03",
             "left": "auto",
             "top": "auto",
             "textStyle": {
@@ -69,7 +68,7 @@ var option_c9e866b79abe4296b9bf8b87b4e5a01e = {
             }
         }
     },
-    "series_id": 7756780,
+    "series_id": 8774729,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -86,13 +85,174 @@ var option_c9e866b79abe4296b9bf8b87b4e5a01e = {
     "series": [
         {
             "type": "bar",
-            "name": "\u7535\u5f71\u6570\u91cf",
+            "name": "\u7535\u5f71\u5e74\u4efd",
             "data": [
-                16,
+                1,
+                1,
+                1,
+                1,
+                2,
+                1,
+                2,
+                1,
+                1,
+                3,
+                3,
+                2,
+                1,
+                1,
+                2,
+                2,
+                1,
+                3,
+                2,
+                2,
                 4,
-                33,
+                1,
+                7,
+                1,
+                4,
+                2,
+                2,
+                3,
+                1,
+                1,
+                1,
+                3,
+                1,
+                2,
+                1,
+                1,
+                1,
+                2,
+                2,
+                4,
+                3,
+                1,
+                1,
+                4,
+                4,
+                2,
+                3,
+                2,
+                5,
+                3,
+                4,
+                2,
+                4,
+                2,
+                1,
+                2,
+                2,
+                4,
+                5,
+                8,
+                3,
+                5,
+                5,
+                5,
+                6,
+                6,
+                4,
+                6,
+                6,
+                3,
+                5,
+                5,
+                4,
+                6,
+                5,
+                5,
+                4,
+                5,
+                7,
+                4,
+                5,
+                4,
+                3,
+                1,
+                1,
+                1,
+                1,
+                2,
+                1,
+                3,
+                1,
+                2,
+                4,
+                4,
+                2,
+                2,
+                1,
+                2,
+                2,
+                1,
+                4,
+                3,
+                4,
+                5,
+                1,
                 9,
-                146
+                1,
+                4,
+                3,
+                3,
+                3,
+                1,
+                1,
+                2,
+                5,
+                1,
+                3,
+                1,
+                2,
+                2,
+                2,
+                3,
+                5,
+                3,
+                1,
+                1,
+                5,
+                5,
+                2,
+                4,
+                2,
+                7,
+                3,
+                6,
+                5,
+                9,
+                4,
+                4,
+                7,
+                4,
+                11,
+                16,
+                16,
+                8,
+                14,
+                10,
+                13,
+                13,
+                17,
+                12,
+                14,
+                18,
+                7,
+                14,
+                11,
+                14,
+                16,
+                18,
+                15,
+                9,
+                15,
+                16,
+                12,
+                12,
+                5,
+                3
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -116,13 +276,13 @@ var option_c9e866b79abe4296b9bf8b87b4e5a01e = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 7756780
+            "seriesId": 8774729
         }
     ],
     "legend": [
         {
             "data": [
-                "\u7535\u5f71\u6570\u91cf"
+                "\u7535\u5f71\u5e74\u4efd"
             ],
             "selectedMode": "multiple",
             "show": true,
@@ -166,11 +326,172 @@ var option_c9e866b79abe4296b9bf8b87b4e5a01e = {
                 }
             },
             "data": [
-                "\u4e2d\u56fd",
-                "\u5370\u5ea6",
-                "\u65e5\u672c",
-                "\u97e9\u56fd",
-                "\u7f8e\u56fd"
+                "1921",
+                "1924",
+                "1925",
+                "1926",
+                "1927",
+                "1928",
+                "1931",
+                "1934",
+                "1936",
+                "1939",
+                "1940",
+                "1941",
+                "1942",
+                "1944",
+                "1946",
+                "1948",
+                "1949",
+                "1950",
+                "1952",
+                "1953",
+                "1954",
+                "1955",
+                "1957",
+                "1958",
+                "1959",
+                "1960",
+                "1961",
+                "1962",
+                "1963",
+                "1964",
+                "1965",
+                "1966",
+                "1967",
+                "1968",
+                "1969",
+                "1971",
+                "1972",
+                "1973",
+                "1974",
+                "1975",
+                "1976",
+                "1977",
+                "1978",
+                "1979",
+                "1980",
+                "1981",
+                "1982",
+                "1983",
+                "1984",
+                "1985",
+                "1986",
+                "1987",
+                "1988",
+                "1989",
+                "1990",
+                "1991",
+                "1992",
+                "1993",
+                "1994",
+                "1995",
+                "1996",
+                "1997",
+                "1998",
+                "1999",
+                "2000",
+                "2001",
+                "2002",
+                "2003",
+                "2004",
+                "2005",
+                "2006",
+                "2007",
+                "2008",
+                "2009",
+                "2010",
+                "2011",
+                "2012",
+                "2013",
+                "2014",
+                "2015",
+                "2016",
+                "2017",
+                "2018",
+                "1921",
+                "1924",
+                "1925",
+                "1926",
+                "1927",
+                "1928",
+                "1931",
+                "1934",
+                "1936",
+                "1939",
+                "1940",
+                "1941",
+                "1942",
+                "1944",
+                "1946",
+                "1948",
+                "1949",
+                "1950",
+                "1952",
+                "1953",
+                "1954",
+                "1955",
+                "1957",
+                "1958",
+                "1959",
+                "1960",
+                "1961",
+                "1962",
+                "1963",
+                "1964",
+                "1965",
+                "1966",
+                "1967",
+                "1968",
+                "1969",
+                "1971",
+                "1972",
+                "1973",
+                "1974",
+                "1975",
+                "1976",
+                "1977",
+                "1978",
+                "1979",
+                "1980",
+                "1981",
+                "1982",
+                "1983",
+                "1984",
+                "1985",
+                "1986",
+                "1987",
+                "1988",
+                "1989",
+                "1990",
+                "1991",
+                "1992",
+                "1993",
+                "1994",
+                "1995",
+                "1996",
+                "1997",
+                "1998",
+                "1999",
+                "2000",
+                "2001",
+                "2002",
+                "2003",
+                "2004",
+                "2005",
+                "2006",
+                "2007",
+                "2008",
+                "2009",
+                "2010",
+                "2011",
+                "2012",
+                "2013",
+                "2014",
+                "2015",
+                "2016",
+                "2017",
+                "2018"
             ]
         }
     ],
@@ -235,7 +556,7 @@ var option_c9e866b79abe4296b9bf8b87b4e5a01e = {
         "#f6f5ec"
     ]
 };
-myChart_c9e866b79abe4296b9bf8b87b4e5a01e.setOption(option_c9e866b79abe4296b9bf8b87b4e5a01e);
+myChart_3c1603b7e8af47bf934331d61aaffeba.setOption(option_3c1603b7e8af47bf934331d61aaffeba);
 
 </script>
 </body>
